# ald-control-system-phase-5

./: .current_test_workspace  .env  .env.example  .gitignore  .security_config.json  2025-09-08-name-specialized-agent-orchestrator-concise.txt  ALD_Recipe_Execution_Process.md  ARCHITECTURE_RECOMMENDATION_COMPLETE.md  ATOMIC_TRANSACTION_DEPLOYMENT_GUIDE.md  Atomicoat ModbusAddress01.05.2025.csv  Atomicoat ModbusAddress03.05.2025.xlsx  Atomicoat_ModbusAddress03.05.2025.csv  BINARY_PARAMETER_CONTROL_GUIDE.md  BULK_READ_IMPLEMENTATION_SUMMARY.md  BULK_READ_OPTIMIZATION_PLAN.md  CLAUDE.md  CLEANUP_VERIFICATION_REPORT.md  CODE_REVIEW_INSTANT_SETPOINT.md  CODE_REVIEW_VALVE_STEP_FIX.md  COMPLETE_ROBUSTNESS_SUMMARY.md  COMPONENT_PARAMETER_ID_IMPLEMENTATION.md  COMPREHENSIVE_SECURITY_ASSESSMENT_REPORT.json  CURSOR_MIGRATION_PROMPT.md  DATABASE_MIGRATION_VERIFICATION_REPORT.md  DATA_INTEGRITY_TESTING_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY_COMPLETE.md  ERROR_HANDLING_IMPLEMENTATION_GUIDE.md  FINAL_ARCHITECTURE_SUMMARY.md  FLUTTER_MACHINE_UPDATE_FIX.md  FLUTTER_PROCESS_DETECTION.md  IMPLEMENTATION_SUMMARY.md  MACHINE_TABLE_ARCHITECTURE.md  MODBUS_DEBUG_README.md  NETWORK_LATENCY_STRESS_TESTING.md  OPERATIONS.md  OPTIMIZATION_NOTES.md  PERFORMANCE_BENCHMARKING_README.md  PLCMANAGER_SETPOINT_FIX.md  QUICK_START.md  (+201 more)
.cursor/: mcp.json
Raspberry-Pi-Remote-Access-main/: Complete-Setup-Explanation.md  Current-Network-Plan.md  Network-Info.md  PLC-Communication-Guide.md  PLC-Quick-Setup.md  PLC-Static-IP-Setup.md  Quick-Reference.md  README.md  Setup-Steps.md  Summary.md  (+1 more)
(+1317 files in other folders)
